Website update to beta v0.1.1

--- a/index.html
+++ b/index.html
@@ -30,13 +30,11 @@
 
     <div class="container">
         <div class="media-container-column mbr-white col-md-8">
-            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">M Shifat Hossain</h1>
+            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">Hello!</h1>
             <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2">
-                Beautiful mobile websites
-            </h3>
+                My name is Shifat Hossain</h3>
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">
-                Click any text to edit or style it. Select text to insert a link. Click blue "Gear" icon in the top right corner to hide/show buttons, text, title and change the block background. Click red "+" in the bottom right corner to add a new block. Use the top left menu to create new pages, sites and add themes.
-            </p>
+                Want to know more about me?<br>You have come to the right place...</p>
             <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="portfolio.html">Portfolio</a> <a class="btn btn-md btn-warning display-4" href="research.html">Research</a> <a class="btn btn-md btn-info display-4" href="projects.html">Projects</a>
                 <a class="btn btn-md btn-white display-4" href="blog.html">Blog</a></div>
         </div>
@@ -46,7 +44,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/c">website maker</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
@@ -56,5 +54,6 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-</body>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i></i></a></div>
+  </body>
 </html>
