create github pages

--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/q">responsive website templates</a></section><section class="header11 cid-r3w5EFmJbZ mbr-fullscreen" id="header11-1z">
+<section class="engine"><a href="https://mobiri.se/f">easy site maker</a></section><section class="header11 cid-r3w5EFmJbZ mbr-fullscreen" id="header11-1z">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
