create github pages

--- a/blog.html
+++ b/blog.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/q">free responsive site templates</a></section><section class="header11 cid-r3wmk5epfs mbr-fullscreen" id="header11-2f">
+<section class="engine"><a href="https://mobiri.se/a">online site builder</a></section><section class="header11 cid-r3wmk5epfs mbr-fullscreen" id="header11-2f">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
