--- a/blog.html
+++ b/blog.html
@@ -22,6 +22,19 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-126818998-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-126818998-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-r3wmo3BzhQ" once="menu" id="menu1-2g">
 
     
@@ -62,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/a">online site builder</a></section><section class="header11 cid-r3wmk5epfs mbr-fullscreen" id="header11-2f">
+<section class="engine"><a href="https://mobiri.se/k">develop own website</a></section><section class="header11 cid-r3wmk5epfs mbr-fullscreen" id="header11-2f">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
