--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-126818998-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-126818998-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="header9 cid-qGgo4qmLEd mbr-fullscreen" data-bg-video="https://www.youtube.com/embed/iGpuQ0ioPrM?autoplay=1&amp;loop=1&amp;controls=0" id="header9-o">
 
     
@@ -44,7 +57,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobiri.se/o">portfolio site templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobiri.se/j">website templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
