--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,19 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-126818998-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-126818998-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-r3w5GBGhim" once="menu" id="menu1-20">
 
     
@@ -62,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/p">website templates free download</a></section><section class="header11 cid-r3w5EFmJbZ mbr-fullscreen" id="header11-1z">
+<section class="engine"><a href="https://mobiri.se/x">css templates</a></section><section class="header11 cid-r3w5EFmJbZ mbr-fullscreen" id="header11-1z">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
