--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,7 @@
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong>Profile Summary</strong><br>A graduate in Electrical and Electronic Engineering currently working as a Lecturer. Having 1 year of professional experience on application development based on .NET framework in a project, also have experience of teaching programming language in a workshop during my undergraduate studies. I have done researches on Artificial Intelligence (AI) and Machine Learning (ML), Digital Image Processing and Digital Signal/Audio Processing.&nbsp;<br></p>
+                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong>Profile Summary</strong><br>A fresh Masters graduate in Electronics Engineering with 2 years of research experience on hardware development, Biomedical signal processing, and Machine learning. Also have experience of teaching bachelor level students in a University as a Lecturer. I have done researches on Biomedical signal processing, Artificial Intelligence (AI) and Machine Learning (ML), Digital Image Processing and Digital Signal/Audio Processing.&nbsp;<br></p>
                         </div>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://drive.google.com/file/d/1_J_XSdtFWYwTVCJ7n43vAj9QWlXr2l0v/view?usp=sharing" target="_blank"><span class="mbri-file mbr-iconfont mbr-iconfont-btn"></span>Download CV</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://drive.google.com/file/d/1XPoXZWEsMKi0-EHn94E6doOSaz4_yJwa/view?usp=sharing" target="_blank"><span class="mbri-file mbr-iconfont mbr-iconfont-btn"></span>Download CV</a></div>
             </div>
         </div>
     </div>
