--- a/portfolio.html
+++ b/portfolio.html
@@ -237,6 +237,23 @@
             Brief description of educational background</h3>
 
         <div class="container timelines-container" mbri-timelines="">
+
+            <div class="row timeline-element  separline">
+                <div class="timeline-date-panel col-xs-12 col-md-6 align-right">
+                    <div class="time-line-date-content">
+                        <p class="mbr-timeline-date mbr-fonts-style display-5">Present</p>
+                    </div>
+                </div>
+                <span class="iconBackground"></span>
+                <div class="col-xs-12 col-md-6 align-left ">
+                    <div class="timeline-text-content">
+                        <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
+                            Masters of Science Electronics Engineering</h4>
+                        <p class="mbr-timeline-text mbr-fonts-style display-7"><strong>Institution:</strong> Kookmin University, Seoul, Korea<br><strong>Major:</strong> Electronics Engineering<br><strong>Research Interests:</strong> Biomedical signal processing, Machine learning, Signal processing, Digital image processing<br><strong>Sessions Attended:</strong> 2019 to present<br><strong>CGPA:</strong> 4.5/4.5</p>
+                    </div>
+                </div>
+            </div>
+
             <div class="row timeline-element reverse separline">      
                  <div class="timeline-date-panel col-xs-12 col-md-6  align-left">         
                     <div class="time-line-date-content">
