--- a/portfolio.html
+++ b/portfolio.html
@@ -248,7 +248,7 @@
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">
-                            Masters of Science Electronics Engineering</h4>
+                            Masters of Science in Electronics Engineering</h4>
                         <p class="mbr-timeline-text mbr-fonts-style display-7"><strong>Institution:</strong> Kookmin University, Seoul, Korea<br><strong>Major:</strong> Electronics Engineering<br><strong>Research Interests:</strong> Biomedical signal processing, Machine learning, Signal processing, Digital image processing<br><strong>Sessions Attended:</strong> 2019 to present<br><strong>CGPA:</strong> 4.5/4.5</p>
                     </div>
                 </div>
