--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
   gtag('config', 'UA-126818998-1');
 </script>
 <!-- /Google Analytics -->
+  
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P87RQ6XSMH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P87RQ6XSMH');
+</script>
 
 
   <section class="header9 cid-qGgo4qmLEd mbr-fullscreen" data-bg-video="https://www.youtube.com/embed/iGpuQ0ioPrM?autoplay=1&amp;loop=1&amp;controls=0" id="header9-o">
