--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,16 @@
   gtag('config', 'UA-126818998-1');
 </script>
 <!-- /Google Analytics -->
+  
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P87RQ6XSMH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P87RQ6XSMH');
+</script>
 
 
   <section class="menu cid-qGjswGUCcG" once="menu" id="menu1-r">
