Update the research page

--- a/research/index.html
+++ b/research/index.html
@@ -362,6 +362,7 @@
 <p>Follow my Researchgate profile <a href="http://www.researchgate.net/profile/Shifat_Hossain">here</a>.</p>
 <h2 id="journals">Journals</h2>
 <ol>
+<li><strong>S. Hossain</strong> and K.-D. Kim, Noninvasive Estimation of Glycated Hemoglobin In-Vivo Based on Photon Diffusion Theory and Genetic Symbolic Regression Models, IEEE Trans Biomed Eng, Dec. 2021. [Accepted for Publication]</li>
 <li><strong>S. Hossain</strong>, C. A. Haque, and K.-D. Kim, “Quantitative Analysis of Different Multi-Wavelength PPG Devices and Methods for Noninvasive In-Vivo Estimation of Glycated Hemoglobin,” <em>Applied Sciences</em>, vol. 11, no. 15, Art. no. 15, Jul. 2021, doi: 10.3390/app11156867.</li>
 <li>C. A. Haque, <strong>S. Hossain</strong>, T.-H. Kwon, and K.-D. Kim, “Noninvasive In Vivo Estimation of Blood-Glucose Concentration by Monte Carlo Simulation,” <em>Sensors</em>, vol. 21, no. 14, Art. no. 14, Jul. 2021, doi: 10.3390/s21144918.</li>
 <li>S. Sen Gupta, T.-H. Kwon, <strong>S. Hossain</strong>, and K.-D. Kim, “Towards non-invasive blood glucose measurement using machine learning: An all-purpose PPG system design,” <em>Biomedical Signal Processing and Control</em>, vol. 68, p. 102706, Jul. 2021, doi: 10.1016/j.bspc.2021.102706.</li>
