--- a/index.html
+++ b/index.html
@@ -427,12 +427,13 @@
 <thead>
   <tr>
     <td><img src="./images/p2_e.jpg" alt="drawing" width="200" /></td>
-    <td><br><br><strong>M. Shifat Hossain</strong><br><br>Ph.D. Student<br>Graduate Research Assistant<br>AI and Computing Laboratory<br>Department of Electrical and Computer Engineering<br>University of Central Florida<br>Orlando, FL, USA</td>
+    <td><br><strong>M. Shifat Hossain</strong><br><br>Ph.D. Student<br>Graduate Research Assistant<br>AI and Computing Laboratory<br>Department of Electrical and Computer Engineering<br>University of Central Florida<br>Orlando, FL, USA<br><br>Email: <a href="mailto:shifathosn@knights.ucf.edu">shifathosn@knights.ucf.edu</a><br><br>
+</td>
     </tr>
 </thead>
 </table>
 
-<div style="text-align: justify"> A PhD student in Electrical Engineering at University of Central Florida. Currently working on contrastive learning, diffusion models, and explainable AI systems. Received Master's degree in Electronics Engineering with 2 years of research experience on hardware development, Machine Learning, and Biomedical signal and image processing. Also have experience of teaching bachelor level students in a University as a Lecturer.</div>
+<div style="text-align: justify"> A Ph.D. student in Electrical Engineering at the University of Central Florida. Currently working on contrastive learning, diffusion models, and explainable AI systems. Received Master's degree in Electronics Engineering with 2 years of research experience in hardware development, Machine Learning, and Biomedical signal and image processing. Also, have experience teaching bachelor-level students at a University as a Lecturer.</div>
 <p><br/></p>
 <div style="font-style:italic;text-align: justify"><strong>Current research interests:</strong> Machine Learning and Deep Learning, Digital image processing, Digital signal/audio processing, Biomedical signal/image processing.</div>
 <p><br /></p>
