--- a/index.html
+++ b/index.html
@@ -466,12 +466,15 @@
 <ul>
 <li><strong>PhD in Electrical Engineering</strong> - August, 2022<ul>
 <li><strong>Institution</strong>: University of Central Florida, Orlando, FL, USA</li>
+<li><strong>Major</strong>: Computer Engineering</li>
+<li><strong>Lab Name</strong>: AI and Emerging Computing Lab</li>
 <li><strong>Research Interests</strong>: Machine Learning, Signal processing, Digital image processing, Biomedical signal processing</li>
 </ul>
 </li>
 <li><strong>Masters of Science in Electronics Engineering</strong> - March, 2021<ul>
 <li><strong>Institution</strong>: Kookmin University, Seoul, Korea</li>
 <li><strong>Major</strong>: Electronics Engineering</li>
+<li><strong>Lab Name</strong>: Multimedia, Communication, and Signal Processing Lab</li>
 <li><strong>Research Interests</strong>: Biomedical signal processing, Machine Learning, Signal processing, Digital image processing</li>
 <li><strong>Thesis</strong>: Glycated Hemoglobin Estimation Based on Photon Diffusion Theory</li>
 <li><strong>Sessions Attended</strong>: 2019 to 2021</li>
@@ -510,7 +513,9 @@
 <hr />
 <h2 id="work-experiences">Work Experiences</h2>
 <ol>
-<li><strong>Researcher (March 2021 - Present):</strong>
+<li><strong>Graduate research assistant (August 2022 - Present)</strong>
+Working as a graduate research assistant in AI and Emerging Computing Lab, Department of Electrical and Computer Engineering, University of Central Florida, Orlando, FL, USA. The research topics include explainable machine learning methods (XAI), ML model security, ML model trust.</li>
+<li><strong>Researcher (March 2021 - July 2022):</strong>
 Working as a full-time researcher in Multimedia, Communication, and Signal Processing Lab, Department of Electronics Engineering, Kookmin University, Seoul, Korea. The research topics include noninvasive estimation of blood contents. Develop algorithms and devices to achieve the noninvasive in vivo measurements.</li>
 <li><strong>Graduate research assistant (March 2019 - February 2021):</strong>
 Worked as a Graduate Research Assistant in Multimedia, Communication, and Signal Processing Lab, Department of Electronics Engineering, Kookmin University, Seoul, Korea. I have done researches on biomedical signal processing and image processing systems in this lab with hardware implementations.</li>
@@ -522,6 +527,8 @@ Designed a web based agricultural data repository for Bangladesh Institute of IC
 <hr />
 <h2 id="honors-and-awards">Honors and Awards</h2>
 <ol>
+<li><strong>ORCGS Doctoral Fellowship | University of Central Florida | August 2022:</strong>
+Received ORCGS Doctoral Fellowship for excellent academic background upon enrollment in the Department of Electrical and Computer Engineering, University of Central Florida as a PhD Student.</li>
 <li><strong>BEST PAPER PRESENTER AWARD | IP CONFERENCE, KOOKMIN UNIVERSITY | JUNE 2020:</strong>
 The presentation on the paper titled "Analysis of national patent statistics for Visual-MIMO" (Visual-MIMO에 대한 국가별 특허 통계 분석) received the best presenter award in an academic congress under the theme of "Development of Intellectual Property and Human Resources in the Age of the Fourth Industrial Revolution" (4차 산업혁명시대의 지식재산과 인적자원 개발).</li>
 <li><strong>BEST POSTER PRESENTATION AWARD | IP CONFERENCE, KOOKMIN UNIVERSITY | APRIL 2019:</strong>
