Updated CV and minor errors in index

--- a/index.html
+++ b/index.html
@@ -477,11 +477,11 @@
 <p><br/></p>
 <div style="font-style:italic;text-align: justify"><strong>Current research interests:</strong> Machine Learning and Deep Learning, Digital image processing, Digital signal/audio processing, Biomedical signal/image processing.</div>
 <p><br /></p>
-<p><a href="CV/CV_Shifat%20Hossain%20%282022%29.pdf"><strong>Download CV (PDF)</strong></a>     <br /><br /><br /></p>
+<p><a href="CV/CV_Shifat%20Hossain%20%282023%29.pdf"><strong>Download CV (PDF)</strong></a>     <br /><br /><br /></p>
 <hr />
 <h2 id="education">Education</h2>
 <ul>
-<li><strong>PhD in Electrical Engineering</strong> - August, 2022<ul>
+<li><strong>PhD in Computer Engineering</strong> - August, 2022<ul>
 <li><strong>Institution</strong>: University of Central Florida, Orlando, FL, USA</li>
 <li><strong>Major</strong>: Computer Engineering</li>
 <li><strong>Lab Name</strong>: AI and Emerging Computing Lab</li>
