--- a/publications/index.html
+++ b/publications/index.html
@@ -436,6 +436,16 @@
 
 <h1 id="publications">Publications</h1>
 <p>Follow my Researchgate profile <a href="http://www.researchgate.net/profile/Shifat_Hossain">here</a>.</p>
+<p>Follow my Google Scholar profile <a href="https://scholar.google.com/citations?user=p-dnT8MAAAAJ&amp;hl=en">here</a>.</p>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script> -->
+
+<!-- <div id='temp'></div>
+<script>
+    $.getJSON("http://cse.bth.se/~fer/googlescholar-api/googlescholar.php?user=p-dnT8MAAAAJ",function(data){
+
+    });
+</script> -->
+
 <script data-goatcounter="https://shifathsn.goatcounter.com/count" async src="https://gc.zgo.at/count.js"></script>
 
 <h2 id="patents">Patents</h2>
