--- a/rick.html
+++ b/rick.html
@@ -4,5 +4,5 @@
 
 <p>&nbsp;</p>
 
-<p>*This was a prank. Don&#39;t be mad Sufian vai... :P</p>
+<p>*This was a prank. Don&#39;t be mad Sufian vai... :P (By guess who? :P)</p>
 
